Fix feedback icons overlap with input value and center the icons vertically

--- a/app/assets/v2/css/forms/input.css
+++ b/app/assets/v2/css/forms/input.css
@@ -21,18 +21,20 @@
 }
 
 .form__input.error {
+  padding-right: 2.8rem;
   color: #D50000;
   background-image: url('/static/v2/images/close-red.png');
   background-repeat: no-repeat;
   background-size: auto 1.313rem;
-  background-position: top 0.4375rem right 1.25rem;
+  background-position: top 0.3rem right 0.5rem;
 }
 
 .form__input.valid {
+  padding-right: 2.8rem;
   background-image: url('/static/v2/images/success.png');
   background-repeat: no-repeat;
   background-size: auto 1.313rem;
-  background-position: top 0.4375rem right 1.25rem;
+  background-position: top 0.3rem right 0.5rem;
 }
 
 .form__input::-webkit-input-placeholder {
